# ast-grep-gui

./: .gitignore  Cargo.toml  README.jp.md  README.md  build.rs
.github/workflows/: release.yml
assets/help/: pattern-help-en.html  pattern-help-ja.html
src/: app.rs  ast_pattern.rs  batch.rs  export.rs  file_encoding.rs  help_html.rs  highlight.rs  i18n.rs  lang.rs  main.rs  pattern_assist.rs  receiver_hint.rs  regex_visualizer.rs  rewrite.rs  search.rs  sg_command.rs  terminal.rs
src/ui/: batch_panel.rs  batch_report_panel.rs  code_panel.rs  cpp_include_diagnostic.rs  file_panel.rs  help_popup.rs  in_view_find.rs  mod.rs  pattern_assist_popup.rs  regex_visualizer_popup.rs  rewrite_popup.rs  scroll_keyboard.rs  status_bar.rs  summary_panel.rs  table_panel.rs  table_preview_popup.rs  terminal_panel.rs  toolbar.rs
