[package]
name = "ast-grep-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ast-grep-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default_fonts", "persistence"] }
egui = "0.29"
ast-grep-core = "0.42"
ast-grep-language = "0.42"
jwalk = "0.8"
rayon = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
crossbeam-channel = "0.5"
rfd = "0.15"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
regex = "1"
rust_xlsxwriter = "0.94.0"
sys-locale = "0.3"
encoding_rs = "0.8"
chardetng = "0.1"
open = "5"
image = { version = "0.25", default-features = false, features = ["ico"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
